# atoptsim

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  camera.cpp  camera.h  hittable.cpp  hittable.h  image.cpp  image.h  main.cpp  material.cpp  material.h  ray.h  real_type.h  rt_utils.h  sphere.cpp  sphere.h  vec3.h
